# hungarian_tarock

./: GRAPHICAL_CLIENT_DESIGN.md  QUICK_START.md  README.md  RECONNECTION_TEST.md  netlify.toml
client/: .env.example  IMPLEMENTATION_STATUS.md  README.md  index.html  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: Card.tsx  Chat.tsx  Hand.tsx  PlayerAvatar.tsx  Toast.tsx
client/src/screens/: ConnectionScreen.tsx  GameOverScreen.tsx  GameScreen.tsx  LobbyScreen.tsx  WaitingRoomScreen.tsx
client/src/screens/phases/: AnnouncementsPhase.tsx  BiddingPhase.tsx  DiscardingPhase.tsx  PartnerCallPhase.tsx  PlayingPhase.tsx
client/src/services/: socketManager.ts
client/src/store/: gameStore.ts
client/src/utils/: cardSorting.ts
server/: .dockerignore  .env.example  .gitignore  DOCKER_HUB_OVERVIEW.md  Docker.md  Dockerfile  HUNGARIAN_TAROKK_RULES.md  PERSISTENCE.md  README.md  __init__.py  config.py  docker-compose.prod.yml  docker-compose.yml  docker-publish.sh  main.py  pyproject.toml  requirements.txt  test_persistence.py
server/data/: tarokk_game.db
server/game_logic/: __init__.py  announcement_checker.py  bidding.py  final_scoring.py  scoring.py
server/k8s/: deployment.yaml  ingress.yaml  service.yaml
server/models/: __init__.py  announcement.py  bid.py  card.py  deck.py  game_state.py  player.py
server/networking/: __init__.py  protocol.py  room_manager.py  server.py
server/persistence/: __init__.py  database.py  persistence_manager.py
server/tests/: test_bidding.py  test_deck.py  test_validation.py
server/utils/: __init__.py  position.py
server/validation/: __init__.py  rules.py
test_client/: README.md  __init__.py  automated_test.py  client.py  interactive_test.py  main.py  pyproject.toml  quick_test.py  requirements.txt
